# ansible-role-openvpn

./: .ansible-lint  .ansible-lint-ignore  .ansible-lint.yml  .gitignore  .markdownlint.yml  .travis.yml  .yamllint  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  galaxy.yml  inventory.yml  pyproject.toml  requirements.yml  run.yml
defaults/: main.yml
files/: dh.pem  dh4096.pem  openvpn-crl-refresh.timer  openvpn-server-override.conf  openvpn_logrotate.conf
filter_plugins/: netmask_to_cidr.py
handlers/: main.yml
meta/: main.yml
tasks/: backup.yml  cert_sync_detection.yml  client_ip.yml  client_keys.yml  common.yml  compile_ldap_plugin.yml  compile_otp_plugin.yml  compile_totp_plugin.yml  config.yml  firewall.yml  firewalld.yml  gen_oath_secret.yml  install.yml  iptables-persistent.yml  iptables.yml  main.yml  mfa.yml  revocation.yml  selinux.yml  separate_client_conf.yml  server_keys.yml  server_keys_crl.yml  set_facts.yml  tunnelblick.yml  ufw.yml  unified_client_conf.yml  uninstall.yml  validate.yml  wipe_keys.yml
templates/: before.rules.j2  ca.conf.j2  cert_sync_expected_clients.j2  client.ovpn.j2  client.ovpn_separate.j2  client_ccd.j2  crl-cron.sh.j2  custom_client.config.j2  ldap.conf.j2  oath.sh.j2  openvpn-crl-refresh.service.j2  openvpn-crl.service.j2  openvpn_logrotate.conf.j2  otp-secrets.j2  revoke.sh.j2  selinux_module.te.j2  server.conf.j2
tests/: almalinux.Dockerfile  centos.Dockerfile  debian.Dockerfile  e2e_config.toml  ec2.yml  end to end.md  fedora-40.Dockerfile  fedora-41.Dockerfile  fedora-latest.dockerfile  fedora.Dockerfile  run_e2e.py  (+12 more)
(+52 files in other folders)
